standart yuklemeyle kurulum

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Blog Title"
-author: "Blog Author"
+title: "Anlatabildiklerim"
+author: "Orkun Gunay"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b> by <b><a href=\"https://github.com/niklasbuschmann\">@niklasbuschmann</a></b>"
 permalink: /:title/
 lang: "en"
@@ -9,15 +9,18 @@ date_format: "%B %d, %Y"
 # Layout
 
 sidebar: false               # show a sidebar instead of the usual header
-show_excerpts: false         # show article excerpts on the home page
+show_excerpts: true          # show article excerpts on the home page
+#show_excerpts: false        # show article excerpts on the home page
 show_related: true           # show the previous and next links after every post
 show_description: true       # show the site description in the sidebar
 show_title: false            # always keep the site title visible
 
 # Styling
 
-dark_header: false           # always keep the header dark
-minimal: false               # use simpler style
+dark_header: true            # always keep the header dark
+minimal: true                # use simpler style
+#dark_header: false          # always keep the header dark
+#minimal: false              # use simpler style
 
 # Menu
 
@@ -26,9 +29,9 @@ navigation:
   - {file: "README.md", icon: address-card}
 
 external:                    # see http://fontawesome.com/icons
-#  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-#  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
-#  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+   - {title: Mail, icon: envelope, url: "mailto:orkungunayx[at]gmail[dot]com"}
+   - {title: Github, icon: github, url: "https://github.com/ogny"}
+   - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
 #  disqus_shortname: ""      # see https://disqus.com/
