--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ minimal: true                # use simpler style
 
 navigation:
   - {file: "index.html", icon: home}
-  - {file: "README.md", icon: address-card}
+  - {file: "hakkimda.md", icon: address-card}
 
 external:                    # see http://fontawesome.com/icons
    - {title: Mail, icon: envelope, url: "mailto:orkungunayx[at]gmail[dot]com"}
