--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ external:                    # see http://fontawesome.com/icons
    - {title: Github, icon: github, url: "https://github.com/ogny"}
    - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
-comments:
-#  disqus_shortname: ""      # see https://disqus.com/
+comments: 
+disqus_shortname: "ogny"      # see https://disqus.com/
 #  isso_domain: ""           # see https://posativ.org/isso/
 
 plugins:
