regolith linux kullaniminda masaustu eklendi

--- a/_config.yml
+++ b/_config.yml
@@ -41,3 +41,10 @@ disqus_shortname: "ogny"      # see https://disqus.com/
 
 plugins:
  - jekyll-feed
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      author: "Cavit Gunay"
