--- a/_config.yml
+++ b/_config.yml
@@ -48,3 +48,8 @@ defaults:
       path: ""
     values:
       author: "Cavit Gunay"
+  -
+    scope:
+      path: "assets/img"
+    values:
+      image: true
