--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ navigation:
   - {file: "index.html", icon: home}
   - {file: "hakkimda.md", icon: address-card}
   - {file: "faydali_linkler.md", icon: address-card}
-  - {file: "cookies.html"}
+  - {file: "kitaplar.html"}
 
 external:                    # see http://fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:cavit[at]orkun[dot]space"}
