--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,18 @@ defaults:
       path: "assets/img"
     values:
       image: true
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      tags: []
+      categories: []
 
 collections:
   kitaplar:
     output: true
+
+tags: []
+categories: []
