new blog with directory schemes

--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,93 @@
-.DS_Store
-.bundle
-.jekyll-cache
-.sass-cache
-Gemfile.lock
-_site
-*.gem
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-/.yarn/*
-!/.yarn/releases
-!/.yarn/plugins
-!/.yarn/sdks
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-public/sitemap.xml
-.vercel
-
-# production
-/build
-*.xml
-
-# rss feed
-/public/feed.xml
-
-# search
-/public/search.json
-
-# misc
+# IDE and Editors
+.vscode/
+*.code-workspace
+.history/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
 
-# debug
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Terraform
+*.tfstate
+*.tfstate.*
+*.tfvars
+.terraform/
+.terraform.lock.hcl
+crash.log
+crash.*.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
 
-# local env files
+# Ansible
+*.retry
+.ansible/
+ansible.log
+
+# Kubernetes
+kubeconfig
+*.kubeconfig
+.kube/
+
+# Helm
+.helm/
+*.tgz
+charts/*/charts/
+requirements.lock
+
+# Docker
+.docker/
+docker-compose.override.yml
+
+# Secrets and Sensitive Files
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+secrets/
+*.secret
+.env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
 
-# Contentlayer
-.contentlayer
+# Logs
+*.log
+logs/
+*.out
+
+# Temporary Files
+tmp/
+temp/
+*.tmp
+*.bak
+*.backup
+
+# OS Files
+Thumbs.db
+.DS_Store
+
+# ArgoCD
+.argocd/
+
+# CI/CD
+.cache/
+.gitlab-ci-local/
+
+# Vault
+.vault-token
+vault-token
+
+# SSH
+id_rsa
+id_ed25519
+known_hosts
+
+# Misc
+*.diff
+*.patch
+.history/
